--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,5 @@
     <string name="app_name">BeAlive</string>
     <string name="action_refresh">Refresh</string>
     <string name="no_internet">Cannot Fetch Data</string>
-    <string name="title_activity_detail">DetailActivity</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_detail">Details</string>
 </resources>
